# konstruktion

./: .env.example  .gitignore  .pre-commit-config.yaml  Justfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/api/endpoints/: auftrag.py
app/api/tests/: test_auftrag.py
app/database/: session.py
app/domains/auftrag/: __init__.py  context_boundary.py  crud.py  models.py  schemas.py
app/services/: calculation_service.py
migrations/: env.py
migrations/versions/: f3b8e2ac85c6_initial_migration_with_auftrag.py
src/app/: main.py
src/app/api/endpoints/: auftrag.py
src/app/api/tests/: test_auftrag.py
src/app/domains/auftrag/: crud.py  models.py
src/app/services/: calculation_service.py
